# CubeVK

./: CMakeCache.txt  CMakeLists.txt  main.c
assets/shaders/: basic.vert.spv
player/: player.c  player.h
render/: renderer.c  renderer.h  vulkan_init.c  vulkan_init.h
util/: math.c  math.h
world/: block.c  block.h  chunk.c  chunk.h
